Fixed visibility issue with map zoom controls

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,26 @@
   visibility: hidden;
 }
 
+#next-button {
+  font-family: 'Roboto', sans-serif;
+  background-color: #555555;
+  border-radius: 0.25rem;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  opacity: 0.9;
+  cursor: pointer;
+  visibility: hidden;
+}
+
+#next-button:hover {
+  opacity: 1;
+}
+
 .transition {
   -webkit-transition: all 0.4s;
   -moz-transition: all 0.4s;
@@ -55,29 +75,10 @@
   transform: translateX(200%);
 }
 
-button {
-  font-family: 'Roboto', sans-serif;
-  background-color: #555555;
-  border-radius: 0.25rem;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  opacity: 0.9;
-  cursor: pointer;
-  visibility: hidden;
-}
-
-button:hover {
-  opacity: 1;
-}
-
 html, body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
